Fix page-header elements alignment
The page-header .caption and the menu links were not alignment.
This was caused by changing the font-weight and size of the caption.

--- a/datafiles/static/hackage.css
+++ b/datafiles/static/hackage.css
@@ -224,7 +224,7 @@ pre {
     text-align: left;
     float: right;
     display: inline-table;
-    margin: 2px 2em 0 2em;
+    margin: 0.35em 2em 0 2em;
   }
 
   #content {
@@ -271,10 +271,10 @@ pre {
 
 
 #page-header {
-  background: rgb(94, 81, 132);
-  border-bottom: 5px solid rgba(69, 59, 97, 0.5);
+  background: #5E5184;
+  border-bottom: 0.35em solid rgba(69, 59, 97, 0.5);
   color: #ddd;
-  padding: 0.6em 0 0.2em 0;
+  padding: 0.6em 0 0.3em 0;
   position: relative;
   font-size: 1.2em;
   margin: 0 auto;
@@ -287,7 +287,7 @@ pre {
   font-weight: bold;
   font-style: normal;
   padding-left: 2.2em;
-  font-size: 1.05rem;
+  font-size: 1rem;
 }
 
 #page-header a:link, #page-header a:visited { color: white; }
